[package]
name = "x3dh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x25519-dalek = { version = "2.0.0", features = ["reusable_secrets", "static_secrets"] }
ed25519-dalek = "2.1.0"
hkdf = "0.12.3"
sha2 = "0.10.8"
rand_core = "0.6.4"
rand = "0.8.5"